--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,25 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+  @apply bg-neutral-900 text-white;
+}
+.sidebar-bg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 5;
+}
+.navbar {
+  @apply shadow-sm shadow-neutral-700;
+}
+h2 {
+  @apply text-3xl;
+}
+main a {
+  text-color: blue;
+}
