--- a/styles/globals.css
+++ b/styles/globals.css
@@ -69,6 +69,7 @@ main ol {
   background: #6c3600;
   animation: ripple 15s infinite;
   box-shadow: 0px 0px 1px 0px #508fb9;
+  z-index: -10;
 }
 
 .small {
@@ -138,8 +139,8 @@ main ol {
     transform: scale(0.8);
   }
 }
-#background-anmation {
-  position: absolute;
+#background-animation {
+  position: fixed;
   top: 50vh;
   z-index: -10;
 }
