Added clickable posts on Home page

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -144,3 +144,18 @@ main ol {
   top: 50vh;
   z-index: -10;
 }
+::-webkit-scrollbar {
+  @apply w-4;
+}
+
+::-webkit-scrollbar-track {
+  @apply bg-neutral-800;
+}
+
+::-webkit-scrollbar-thumb {
+  @apply bg-neutral-700;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  @apply bg-neutral-600;
+}
