--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -1,5 +1,6 @@
-@media only screen and (max-width: 640px) {
+@media screen and (max-width: 640px) {
   #background-animation {
+    top: 50vh;
     transform: scale(1);
   }
 }
